PyMaker/datas/object2/RawHTML/i11801/Python_DOC_referPages.got-error-while-running-python-snippet-involving-coroutine.txt
<div class="post-text" itemprop="text">
<p>New to python. Tried to run the following sample program from <a href="https://docs.python.org/3/library/asyncio-task.html" rel="nofollow">https://docs.python.org/3/library/asyncio-task.html</a>  but got error</p>
<pre><code>$ python coro.py
  File "coro.py", line 3
    async def compute(x, y):
            ^
SyntaxError: invalid syntax
</code></pre>
<p>Here is the code snippet in coro.py</p>
<pre><code>import asyncio

async def compute(x, y):
    print("Compute %s + %s ..." % (x, y))
    await asyncio.sleep(1.0)
    return x + y

async def print_sum(x, y):
    result = await compute(x, y)
    print("%s + %s = %s" % (x, y, result))

loop = asyncio.get_event_loop()
loop.run_until_complete(print_sum(1, 2))
loop.close()
</code></pre>
<p>I am running python 2.7.6 in Ubuntu 14.04.</p>
<p>Suspecting that I don't have asyncio, I tried to install it (didn't have any effect on previous code snippet), got funny result, I really don't know whether it worked</p>
<pre><code># pip install asyncio
Downloading/unpacking asyncio
  Downloading asyncio-3.4.3.tar.gz (204kB): 204kB downloaded
  Running setup.py (path:/tmp/pip_build_root/asyncio/setup.py) egg_info for package asyncio

Installing collected packages: asyncio
  Running setup.py install for asyncio
      File "/usr/local/lib/python2.7/dist-packages/asyncio/windows_utils.py", line 83
        def pipe(*, duplex=False, overlapped=(True, True), bufsize=BUFSIZE):
                  ^
    SyntaxError: invalid syntax

      File "/usr/local/lib/python2.7/dist-packages/asyncio/windows_events.py", line 45
        def __init__(self, ov, *, loop=None):
                                ^
    SyntaxError: invalid syntax

      File "/usr/local/lib/python2.7/dist-packages/asyncio/futures.py", line 143
        def __init__(self, *, loop=None):
                            ^
    SyntaxError: invalid syntax

      File "/usr/local/lib/python2.7/dist-packages/asyncio/streams.py", line 39
        def open_connection(host=None, port=None, *,
                                                   ^
    SyntaxError: invalid syntax

      File "/usr/local/lib/python2.7/dist-packages/asyncio/base_subprocess.py", line 151
        _, pipe = yield from loop.connect_write_pipe(
                           ^
    SyntaxError: invalid syntax

      File "/usr/local/lib/python2.7/dist-packages/asyncio/events.py", line 282
        def getaddrinfo(self, host, port, *, family=0, type=0, proto=0, flags=0):
                                           ^
    SyntaxError: invalid syntax

      File "/usr/local/lib/python2.7/dist-packages/asyncio/coroutines.py", line 46
        yield from gen
                 ^
    SyntaxError: invalid syntax

      File "/usr/local/lib/python2.7/dist-packages/asyncio/queues.py", line 41
        def __init__(self, maxsize=0, *, loop=None):
                                       ^
    SyntaxError: invalid syntax

      File "/usr/local/lib/python2.7/dist-packages/asyncio/base_events.py", line 177
        yield from waiter
                 ^
    SyntaxError: invalid syntax

      File "/usr/local/lib/python2.7/dist-packages/asyncio/subprocess.py", line 118
        return (yield from self._transport._wait())
                         ^
    SyntaxError: invalid syntax

      File "/usr/local/lib/python2.7/dist-packages/asyncio/tasks.py", line 70
        def __init__(self, coro, *, loop=None):
                                  ^
    SyntaxError: invalid syntax

      File "/usr/local/lib/python2.7/dist-packages/asyncio/test_utils.py", line 134
        def _run_test_server(*, address, use_ssl=False, server_cls, server_ssl_cls):
                              ^
    SyntaxError: invalid syntax

      File "/usr/local/lib/python2.7/dist-packages/asyncio/unix_events.py", line 188
        yield from waiter
                 ^
    SyntaxError: invalid syntax

      File "/usr/local/lib/python2.7/dist-packages/asyncio/locks.py", line 96
        def __init__(self, *, loop=None):
                            ^
    SyntaxError: invalid syntax

      File "/usr/local/lib/python2.7/dist-packages/asyncio/selectors.py", line 39
        "{!r}".format(fileobj)) from None
                                   ^
    SyntaxError: invalid syntax

      File "/usr/local/lib/python2.7/dist-packages/asyncio/proactor_events.py", line 386
        *, server_side=False, server_hostname=None,
         ^
    SyntaxError: invalid syntax

      File "/usr/local/lib/python2.7/dist-packages/asyncio/selector_events.py", line 57
        def _make_socket_transport(self, sock, protocol, waiter=None, *,
                                                                       ^
    SyntaxError: invalid syntax


Successfully installed asyncio
Cleaning up...
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>From <a href="https://docs.python.org/3/library/asyncio-task.html" rel="nofollow">https://docs.python.org/3/library/asyncio-task.html</a>:</p>
<blockquote>
<p>The async def type of coroutine was added in Python 3.5</p>
</blockquote>
<p>--&gt; you say you're using Python 2.7, that won't work</p>
</div>
<div class="post-text" itemprop="text">
<p>Looks like async is only supported in Python 3, <a href="https://www.python.org/dev/peps/pep-3156/#dependencies" rel="nofollow">as per this documentation</a></p>
</div>
<span class="comment-copy"><code>asyncio</code> is available as standard module from Python 3.4 onwards.</span>
<span class="comment-copy">Wonder if there is a way to get python 2.7 working with it.</span>
<span class="comment-copy">@codingFun No, there is no way. <code>asyncio</code> is part of the standard library, it's designed to work only with Python 3.4 and above. There are major fundamental differences between how the two are written, you aren't going to get the benefits in Python 2.7. You are welcome to try backporting it, however, but good luck.</span>
<span class="comment-copy">Thanks @akshat-mahajan, it makes sense.</span>
